KSCM-1912 Review Course Proposal: Fix Alignement Issues With Formats
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@67901 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
@@ -415,6 +415,11 @@
     clear : both;
 }
 
+#course_review_format_details table tr {
+    float : left;
+    clear : both;
+}
+
 /*
  *  Review Proposal styling
  */
